# analyticord-hs

./: README.md  analyiticord-hs.cabal  analyticord-hs.cabal  build_docs.sh  fix_docs.py
docs/: DataTypes.html  LICENSE  Lib.html  analyticord-hs.haddock  doc-index.html  index.html  mini_DataTypes.html  mini_Lib.html
docs/src/: DataTypes.html  Lib.html
src/: DataTypes.hs  Lib.hs
