name:                analyticord-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nitros12/analyticord-hs#readme
license:             BSD3
license-file:        LICENSE
author:              ben simms
maintainer:          ben@bensimms.moe
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , DataTypes
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.1
                     , yaml >= 0.8
                     , bytestring
                     , containers
                     , text
                     , http-client
                     , http-client-tls
                     , http-types
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nitros12/analyticord-hs
